--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,33 +1,29 @@
-version: 0.2
-
+artifacts:
+  files:
+  - .ebextensions
+  - config.ru
+  - Gemfile
+  - README.md
+  - Rakefile
+  - app/**/*
+  - config/**/*
+  - db/**/*
+  - log/**/*
+  - public/**/*
+  - vendor/**/*
+  type: zip
+eb_codebuild_settings:
+  CodeBuildServiceRole: aws-codestar-service-role
+  ComputeType: BUILD_GENERAL1_SMALL
+  Image: aws/codebuild/eb-ruby-2.3-amazonlinux-64:2.3.2
+  Timeout: null
 phases:
   install:
     commands:
-      # Upgrade AWS CLI to the latest version
-      - pip install --upgrade awscli
-      
-      # Install Ruby dependencies from the Gemfile.
-      - bundle install
-
+    - pip install --upgrade awscli
+    - bundle install
   pre_build:
     commands:
-      # Set the SECRET_KEY_BASE environment variable for running tests
-      - export SECRET_KEY_BASE=$(rake secret)
-
-      # Run the tests using RSpec.
-      - rspec
-
-artifacts:
-  type: zip
-  files:
-    - '.ebextensions'
-    - 'config.ru'
-    - 'Gemfile'
-    - 'README.md'
-    - 'Rakefile'
-    - 'app/**/*'
-    - 'config/**/*'
-    - 'db/**/*'
-    - 'log/**/*'
-    - 'public/**/*'
-    - 'vendor/**/*'
+    - export SECRET_KEY_BASE=$(rake secret)
+    - rspec
+version: 0.2
