--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ pids/
 spec/examples.txt
 log/development.log
 db/development.sqlite3
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
